# SuriBrows

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: SRS.md
src/: browser.rs  chrome.rs  config.rs  keyutils.rs  lib.rs  main.rs  preferences.rs  privacy.rs  rendering.rs  resources.rs  security.rs  servo_glue.rs  settings.rs  urlbar.rs
